--- a/auth/nginx.conf
+++ b/auth/nginx.conf
@@ -14,7 +14,7 @@ http {
 
   server {
     listen 80;
-      server_name repo.lab.com;
+      server_name servername.com;
 
       client_max_body_size 0;
 
