update openresty config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,8 +5,8 @@
 server {
        listen   80;
        root     /opt/nginx/html;
-       resolver 127.0.0.11  valid=1s    ipv6=off;
-       
+       resolver 127.0.0.11  valid=1s    ipv6=off; # resolver  host ip
+       # ssl_verify = "no", -> adammalone.net/post/integrating-nginx-and-keycloak-without-openresty/
        access_by_lua '
          local opts = {
            redirect_uri_path = "/redirect_uri",
@@ -14,6 +14,7 @@ server {
            discovery = "https://localhost:8443/realms/demo/.well-known/openid-configuration",
            client_id = "registry",
            client_secret = "thisisasecretforregistryclient",
+           ssl_verify = "no",
            redirect_uri_scheme = "http",
            logout_path = "/logout",
            redirect_after_logout_uri = "https://localhost:8443/realms/demo/protocol/openid-connect/logout?redirect_uri=http://localhost:5043/",
@@ -38,8 +39,8 @@ server {
           proxy_set_header    X-Forwarded-For         $remote_addr;
       }   
       # https://stackoverflow.com/questions/32991000/lua-nginx-ssl-certificate-setup
-      lua_ssl_verify_depth 2;
-      lua_ssl_trusted_certificate /certs/cert.pem;
+      # lua_ssl_verify_depth 2;
+      # lua_ssl_trusted_certificate /certs/cert.pem;
       
       # redirect server error pages to the static page /40x.html
       #
