group based access

--- a/Dockerfile.openresty
+++ b/Dockerfile.openresty
@@ -6,6 +6,8 @@ RUN apk add --no-cache openssl-dev
 RUN apk add --no-cache git
 RUN apk add --no-cache gcc
 RUN luarocks install lua-resty-openidc
- 
+RUN luarocks install lua-resty-jwt
+RUN luarocks install lua-resty-http
+RUN luarocks install lua-resty-session
 ENTRYPOINT ["/usr/local/openresty/nginx/sbin/nginx", "-g", "daemon off;"]
 EXPOSE 80
