--- a/keycloak.yml
+++ b/keycloak.yml
@@ -11,6 +11,7 @@ services:
       - keycloak_net
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/access.lua:/etc/nginx/conf.d/access.lua
   registry:
     image: registry:2.7.0
     container_name: registry
