--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,34 +1,12 @@
  upstream registry-ui {
     server ui:8000;
 }
- 
+
 server {
        listen   80;
        root     /opt/nginx/html;
        resolver 127.0.0.11  valid=1s    ipv6=off; # resolver  host ip
-       # ssl_verify = "no", -> adammalone.net/post/integrating-nginx-and-keycloak-without-openresty/
-       access_by_lua '
-         local opts = {
-           redirect_uri_path = "/redirect_uri",
-           accept_none_alg = true,
-           discovery = "https://localhost:8443/realms/demo/.well-known/openid-configuration",
-           client_id = "registry",
-           client_secret = "thisisasecretforregistryclient",
-           ssl_verify = "no",
-           redirect_uri_scheme = "http",
-           logout_path = "/logout",
-           redirect_after_logout_uri = "https://localhost:8443/realms/demo/protocol/openid-connect/logout?redirect_uri=http://localhost:5043/",
-           redirect_after_logout_with_id_token_hint = false,
-           session_contents = {id_token=true}
-         }
-         -- call introspect for OAuth 2.0 Bearer Access Token validation
-         local res, err = require("resty.openidc").authenticate(opts)
-         if err then
-           ngx.status = 403
-           ngx.say(err)
-           ngx.exit(ngx.HTTP_FORBIDDEN)
-         end
-      ';
+       access_by_lua_file /etc/nginx/conf.d/access.lua;
  
       # I disabled caching so the browser won't cache the site.
       expires           0;
@@ -38,6 +16,11 @@ server {
           proxy_pass      http://registry-ui;
           proxy_set_header    X-Forwarded-For         $remote_addr;
       }   
+      location /events {
+        rewrite ^/events(.*)$ http://localhost:5043/logout redirect; # redirect /events to http://localhost:5043/logout which will log you out
+       # deny all;  # deny all access to /events
+      }
+
       # https://stackoverflow.com/questions/32991000/lua-nginx-ssl-certificate-setup
       # lua_ssl_verify_depth 2;
       # lua_ssl_trusted_certificate /certs/cert.pem;
