--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
       - "REGISTRY_AUTH_HTPASSWD_REALM=Registry Realm"
       - "REGISTRY_AUTH_HTPASSWD_PATH=/auth/htpasswd"
       - "REGISTRY_STORAGE_DELETE_ENABLED=true"
-    ports:
-      - 5000:5000
+#    ports:
+#      - 5000:5000
     networks:
       - mynet
   ui:
